--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GithupRepoViewer</string>
+    <string name="search">Search</string>
+    <string name="no_data">No Data</string>
+    <string name="loading">Loading ...</string>
 </resources>
