--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,16 @@
     <string name="search">Search</string>
     <string name="no_data">No Data</string>
     <string name="loading">Loading ...</string>
+    <string name="error_happend">Error Happend</string>
+    <string name="search_repository_by_name">Search Repository by name</string>
+    <string name="results_for">Results for “%1$s”</string>
+    <string name="there_is_no_internet_connection">There is no Internet connection</string>
+    <string name="issues_page">Issues Page</string>
+    <string name="show_issues">Show Issues</string>
+    <string name="try_again">Try again</string>
+    <string name="internet_connection_come_back">Internet connection come back</string>
+    <string name="darkmode">DarkMode</string>
+    <string name="nightmode">NightMode</string>
+    <string name="author">Author: %1$s</string>
+    <string name="state">State: %1$s</string>
 </resources>
